common-applications/test-environment/opengauss-website-revision/meetingserver/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-XSS-Protection "1; mode=block";
      add_header X-Frame-Options "DENY";
      add_header Content-Security-Policy "script-src 'self' *.baidu.com ers.baidu.com 'unsafe-inline'; object-src 'none'; frame-src 'none'";
      add_header Cache-Control "no-cache";
      add_header Pragma "no-cache";
      add_header X-Content-Type-Options "nosniff";
  name: meetingserver-ingress
  namespace: opengauss-website-revision
spec:
  rules:
  - host: opengauss-website.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: meetingserver-service
          servicePort: 80
        path: /calendar(/|$)(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - opengauss-website.test.osinfra.cn
    secretName: meetingserver-tls

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: nginx
  name: opengauss-meetingserver-ingress
  namespace: opengauss-website-revision
spec:
  rules:
  - host: meeting-opengauss.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: meetingserver-service
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - meeting-opengauss.test.osinfra.cn
    secretName: meetingserver-tls
